Klárað: - Þegar Bæta við takki er notaður á að bæta gefnum fjölda við körfu. - Þegar ekkert er í körfu á að standa Ekkert í körfu.. - Þegar eitthvað er í körfu á að birta þær vörur og nota HTML strúktúr sem er í athugasemd í index.html.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <h2>Karfa</h2>
         <div class="cart">
           <p class="empty-message">Ekkert í körfu.</p>
-          <div class="cart-content hidden">eitthvað í körfu.</div>
+          <!-- eyddi 'eitthvað í körfu' því það var bara ljótt að það var til staðar þegar eitthvað var í körfu-->
 
-          <table class="table">
+          <table class="table" id="cart">
             <thead>
               <tr>
                 <th>Heiti</th>
